clients/atlas-tui/tests/snapshots/golden_settings__a_stripped_store_renders_every_card_absent_and_never_a_zero.snap
---
source: tests/golden_settings.rs
expression: "settings_from(r#\"{\"llm\": {}, \"policy\": {\"constraints\": {}}, \"system\": {}, \"desk_mode\": {}}\"#).frame(120,\n36)"
---
" no market assets in the last snapshot                                                                                  "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         --                      nothing has said what this desk reads  │ desk stress  …                  "
" 3 MKTS │ data         --                                                             │ regime --  robust --            "
" 4 BOOK │ book         --                                                             │ drawdown --  tier --            "
" 5 RSCH │ lane         --                                                             │ gross --                        "
" 6 PRED │ alpaca login --                                                             │                                 "
" 7 WORK │                                                                             │▌ BREADTH                        "
" 8 AUDIT│                                                                             │ --                              "
"▌9 SETT │                                                                             │ adv -- / dec --                 "
" 0 VIS  │ read-only — cannot switch the desk   read-only — cannot change what is read │                                 "
"        │▌ METHOD                               ▌ SYSTEM                              │▌ MOVERS                         "
"        │ nothing has said how this desk solves  desk         --                      │ --                              "
"        │                                        provenance   --                      │                                 "
"        │                                        claude       --                      │▌ REGIME                         "
"        │                                        mcp          none configured         │ … waiting for the regime panel  "
"        │                                        proxy        --                      │                                 "
"        │                                        workforce    --                      │                                 "
"        │                                        authority    --                      │                                 "
"        │ read-only — cannot change the method   read-only ───────────────────────────│                                 "
"        │▌ POLICY                               ▌ MODELS                              │                                 "
"        │ policy       --                        probed       not yet                 │                                 "
"        │ method       --                        reasoner     --                      │                                 "
"        │ algorithm    --                        judgment     --                      │▌ ATLAS READ                     "
"        │ objective    --                        workforce    --                      │ state      --                   "
"        │ solver       --                        web          -- · chat, /cli tools   │ agreement  --                   "
"        │ long only    --                        workflows    -- · refused for chat   │ conviction --                   "
"        │ budget       --                        build        -- · the /build key     │ news       --                   "
"        │ per asset    --                        nothing here binds a non-chat caller │─────────────────────────────────"
"        │ read-only ───────────────────────────                                       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                        read-only — cannot grant a right ────│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                       ▌ UNIVERSE                            │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 no universe in the last snapshot     │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor                                           │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ read-only ───────────────────────────  read-only ───────────────────────────│ WATCHING                        "
" /command …                                                                            ● SSE  ● OWNER  --·manual  GLASS "
