clients/atlas-tui/tests/snapshots/golden_settings__the_method_card_renders_read_only_at_120x36.snap
---
source: tests/golden_settings.rs
assertion_line: 2409
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         SYNTHETIC               nothing has said what this desk reads  │ desk stress  …                  "
" 3 MKTS │ data         synthetic                                                      │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │ book         simulated                                                      │ drawdown 0.0%  tier NONE        "
" 5 RSCH │ lane         offline · synthetic                                            │ gross 100.0%                    "
" 6 PRED │ alpaca login no ALPACA_API_KEY_ID                                           │                                 "
" 7 WORK │in the environment or .env                                                   │▌ BREADTH                        "
" 8 AUDIT│                                                                             │ ███████████████████████████████ "
"▌9 SETT │                                                                             │ adv 1 / dec 4                   "
" 0 VIS  │ read-only — cannot switch the desk   read-only — cannot change what is read │                                 "
"        │▌ AUTHORITY                            ▌ SYSTEM                              │▌ MOVERS                         "
"        │ nothing has said what may book itself  desk         paper                   │ ▲ best  XLF    +1.24%           "
"        │                                        provenance   synthetic · 0 d         │ ▼ worst XLK    -2.08%           "
"        │                                        claude       available               │                                 "
"        │                                        mcp          qlab-operator           │▌ REGIME                         "
"        │ read-only — cannot revoke a grant ───  proxy        available               │ … waiting for the regime panel  "
"        │▌ METHOD                                workforce    available               │                                 "
"        │ solving      hrp · B2 · cap none       authority    propose_only            │                                 "
"        │ ▸ hrp                 B2  now          read-only ───────────────────────────│                                 "
"        │   risk_parity         B3              ▌ MODELS                              │                                 "
"        │   min_variance        A1               probed       12s ago                 │                                 "
"        │ not choosable — research stage         reasoner     ollama · qwen2.5:7b     │                                 "
"        │   regime_min_variance                  judgment     on                      │▌ ATLAS READ                     "
"        │   ▾ 2 more                             workforce    claude · tiers decide   │ state      STRESS               "
"        │ read-only — cannot change the method   web          -- · chat, /cli tools   │ agreement  ALIGNED              "
"        │▌ POLICY                                workflows    -- · refused for chat   │ conviction 84.0%                "
"        │ policy       hrp · hrp · hrp · hrp     build        -- · the /build key     │ news       alpaca               "
"        │ long only    yes                       nothing here binds a non-chat caller │─────────────────────────────────"
"        │ budget       100.0%                                                         │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ per asset    0.0% – 40.0%              read-only — cannot grant a right ────│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ read-only ─────────────────────────── ▌ UNIVERSE                            │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 watching     7 symbols               │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor      ACWI SPY QQQ XLK XLF BNDW DUST       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ read-only ───────────────────────────  read-only ───────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                      ● SSE  ● OWNER  SYNTHETIC  propose·auto  GLASS "
